--- a/roles/deploy/files/web/index.html
+++ b/roles/deploy/files/web/index.html
@@ -29,7 +29,7 @@
             <div class="navbar">
                 <button class="navtab" onclick="tab('about')" id="aboutnav">about</button>
                 <button class="navtab" onclick="tab('projects')" id="projectsnav">projects</button>
-                <button class="navtab" onclick="tab('commissions')" id="commissionsnav">commissions</button>
+                <button class="navtab" onclick="tab('freelance')" id="freelancenav">freelance</button>
                 <button class="navtab" onclick="tab('devblog')" id="devblognav">devblog</button>
                 <button class="navtab" onclick="tab('tf2')" id="tf2nav">tf2 servers</button>
             </div>
@@ -38,15 +38,7 @@
         <div class="header-divider"></div>
 
         <div id="abouttab" class="tab">
-            <p>my name is jack <span class="tcolors">"raspy"</span> avery and i'm an avid python developer with additional experience in:</p>
-            
-            <br>
-            <ul>
-                <li>cybersecurity and penetration testing with TRAs</li>
-                <li>full-stack web development using react/materialui 5, django, and RDBMS (postgreSQL/mySQL)</li>
-                <li>CI/CD cloud deployment with AWS using ansible and docker</li>
-            </ul>
-            <br>
+            <p>my name is jack <span class="tcolors">"raspy"</span> avery i'm a software developer.</p>
 
             <p>
             my projects are visible under the <a href="#projects">projects</a> tab.<br>
@@ -156,7 +148,7 @@
             </p>
         </div>
 
-        <div id="commissionstab" class="tab">
+        <div id="freelancetab" class="tab">
             <p>
             i am open for freelance software development work ("commissions").<br>
             <br>
@@ -256,7 +248,10 @@
         </div>
 
         <div id="devblogtab" class="tab">
-            <p>august 2, 2024 - <a href="post/debian_install_for_arch_users.html">installing debian (for arch users)</a></p>
+            <p>
+            august 26, 2024 - <a href="/post/debootstrap_guide.html">an in-depth debootstrap guide</a><br>
+            august 2, 2024 - <a href="/post/debian_install_for_arch_users.html">installing debian (for arch users)</a>
+            </p>
         </div>
 
         <div class="vertical-divider"></div>
