--- a/roles/deploy/files/web/index.html
+++ b/roles/deploy/files/web/index.html
@@ -95,10 +95,19 @@
 
             <div class="small-vertical-divider"></div>
 
+            <h3><a target="_blank" href="https://github.com/steaming-mangos/hyperleaderbot">HyperLeaderBot</a></h3>
+
+            <p>
+            <strong>HyperLeaderBot</strong> is a Discord bot that provides additional tools and functionality for the official <strong>Hyper Demon</strong> Discord server.<br>
+            I am a contributor to the project. The lead developer is <a target="_blank" href="https://github.com/steaming-mangos">steaming-mangos</a>.
+            </p>
+
+            <div class="small-vertical-divider"></div>
+
             <h3><a target="_blank" href="/tf2qp">tf2qp</a></h3>
 
             <p>
-            <strong>tf2qp</strong> is a work-in-progress reimplementation of Team Fortress 2's legacy <strong>quickplay</strong> system.<br>
+            <strong>tf2qp</strong> is a discontinued reimplementation of Team Fortress 2's legacy <strong>quickplay</strong> system.<br>
             </p>
 
             <div class="small-vertical-divider"></div>
@@ -189,6 +198,7 @@
             2. <a target="_blank" href="https://github.com/jack-avery/ansible-tf2network/tree/bff">boxes4foxes</a>, a team fortress 2 community server network<br>
             3. <a target="_blank" href="https://github.com/jack-avery/ansible-tf2network/tree/swishcast">SwishCast Central</a>, a tf2 server for the MANN Magazine's podcast 'The SwishCast'<br>
             4. <a target="_blank" href="https://github.com/jack-avery/ansible-tf2network/tree/bestwater">badwater bestwater</a>, a 24/7 badwater tf2 server<br>
+            5. <a target="_blank" href="https://github.com/jack-avery/ansible-tf2network/tree/controlpoint">Control Point Official</a>, a tf2 server for the Control Point podcast<br>
             <br>
 
             <strong>4. my idea is a bit fuzzy or unfinished. can you work with that?</strong><br>
@@ -222,6 +232,7 @@
 
             <p>
                 <strong>SwishCast Central</strong> is a server for the Team Fortress 2 podcast <strong>the SwishCast</strong> meant to provide an improved casual experience.<br><br>
+                You can connect at 57.129.13.51:27015.<br><br>
 
                 <a target="_blank" href="https://www.youtube.com/@MANN_Magazine">youtube channel</a><br>
                 <a target="_blank" href="https://discord.gg/CykAHkzkhx">discord server</a><br>
@@ -232,9 +243,22 @@
             <h3>badwater bestwater</h3>
 
             <p>
-                <strong>badwater bestwater</strong> is a <strong>24/7 pl_badwater</strong> server.<br><br>
+                <strong>badwater bestwater</strong> is a <strong>24/7 pl_badwater</strong> server.<br>
+                You can connect at bestwater.jackavery.ca:27015.<br><br>
 
                 <a target="_blank" href="https://discord.gg/RWkHPaKy">discord server</a><br>
+            </p>
+
+            <div class="vertical-divider"></div>
+
+            <h3>Control Point Official</h3>
+
+            <p>
+                <strong>Control Point Official</strong> is a server for the Team Fortress 2 podcast <strong>Control Point</strong> with a nostalgic mappool and casual ruleset.<br>
+                You can connect at controlpoint.jackavery.ca:27015.<br><br>
+
+                <a target="_blank" href="https://www.youtube.com/@ControlPointPodcast">youtube channel</a><br>
+                <a target="_blank" href="https://discord.gg/RTye2z2unH">discord server</a><br>
             </p>
 
             <div class="vertical-divider"></div>
