--- a/roles/deploy/files/web/index.html
+++ b/roles/deploy/files/web/index.html
@@ -231,8 +231,8 @@
             <h3>SwishCast Central</h3>
 
             <p>
-                <strong>SwishCast Central</strong> is a server for the Team Fortress 2 podcast <strong>the SwishCast</strong> meant to provide an improved casual experience.<br><br>
-                You can connect at 57.129.13.51:27015.<br><br>
+                <strong>SwishCast Central</strong> is a server for the Team Fortress 2 podcast <strong>the SwishCast</strong> meant to provide an improved casual experience.<br>
+                You can connect at 57.129.13.51:27015<br><br>
 
                 <a target="_blank" href="https://www.youtube.com/@MANN_Magazine">youtube channel</a><br>
                 <a target="_blank" href="https://discord.gg/CykAHkzkhx">discord server</a><br>
@@ -244,7 +244,7 @@
 
             <p>
                 <strong>badwater bestwater</strong> is a <strong>24/7 pl_badwater</strong> server.<br>
-                You can connect at bestwater.jackavery.ca:27015.<br><br>
+                You can connect at bestwater.jackavery.ca:27015<br><br>
 
                 <a target="_blank" href="https://discord.gg/RWkHPaKy">discord server</a><br>
             </p>
@@ -255,7 +255,7 @@
 
             <p>
                 <strong>Control Point Official</strong> is a server for the Team Fortress 2 podcast <strong>Control Point</strong> with a nostalgic mappool and casual ruleset.<br>
-                You can connect at controlpoint.jackavery.ca:27015.<br><br>
+                You can connect at controlpoint.jackavery.ca:27015<br><br>
 
                 <a target="_blank" href="https://www.youtube.com/@ControlPointPodcast">youtube channel</a><br>
                 <a target="_blank" href="https://discord.gg/RTye2z2unH">discord server</a><br>
