--- a/roles/deploy/files/web/tf2qp/index.html
+++ b/roles/deploy/files/web/tf2qp/index.html
@@ -2,9 +2,9 @@
 
 <html>
     <head>
-        <link rel="stylesheet" href="css/style.css" />
+        <link rel="stylesheet" href="./css/style.css" />
         <script src="../js/script.js"></script>
-        <script src="js/script.js"></script>
+        <script src="./js/script.js"></script>
         <meta charset="utf-8" />
         <link rel="shortcut icon" href="/favicon.ico" />
         <meta name="viewport" content="initial-scale=1, width=device-width" />
