bestwater is offline

--- a/roles/deploy/files/web/index.html
+++ b/roles/deploy/files/web/index.html
@@ -13,7 +13,6 @@
     <body>
         <header>
             <h1 class="pagetitle">jack avery</h1>
-            
             <div class="iconbar">
                 <a target="_blank" href="https://github.com/jack-avery">
                     <svg class="icon" viewBox="0 0 24 24">
@@ -232,21 +231,10 @@
 
             <p>
                 <strong>SwishCast Central</strong> is a server for the Team Fortress 2 podcast <strong>the SwishCast</strong> meant to provide an improved casual experience.<br>
-                You can connect at 57.129.13.51:27015<br><br>
+                You can view their list of servers in their discord server.<br><br>
 
                 <a target="_blank" href="https://www.youtube.com/@MANN_Magazine">youtube channel</a><br>
                 <a target="_blank" href="https://discord.gg/CykAHkzkhx">discord server</a><br>
-            </p>
-
-            <div class="vertical-divider"></div>
-
-            <h3>badwater bestwater</h3>
-
-            <p>
-                <strong>badwater bestwater</strong> is a <strong>24/7 pl_badwater</strong> server.<br>
-                You can connect at bestwater.jackavery.ca:27015<br><br>
-
-                <a target="_blank" href="https://discord.gg/RWkHPaKy">discord server</a><br>
             </p>
 
             <div class="vertical-divider"></div>
@@ -268,6 +256,14 @@
             <p>
                 <strong>Boxes 4 Foxes</strong> was a network with servers running improved versions of the popular maps <strong>hightower</strong>, <strong>2fort</strong>, and <strong>turbine</strong>,
                 a hang-out server where players can chat and explore fun custom maps, as well as my custom gamemode <strong>rinstagib</strong>.
+            </p>
+
+            <div class="vertical-divider"></div>
+
+            <h3>badwater bestwater</h3>
+
+            <p>
+                <strong>badwater bestwater</strong> was a <strong>24/7 pl_badwater</strong> server.<br>
             </p>
         </div>
 
