make everything more readable

--- a/roles/deploy/files/web/index.html
+++ b/roles/deploy/files/web/index.html
@@ -28,7 +28,7 @@
             <div class="navbar">
                 <button class="navtab" onclick="tab('about')" id="aboutnav">about</button>
                 <button class="navtab" onclick="tab('projects')" id="projectsnav">projects</button>
-                <button class="navtab" onclick="tab('freelance')" id="freelancenav">freelance</button>
+                <!-- <button class="navtab" onclick="tab('freelance')" id="freelancenav">freelance</button> -->
                 <button class="navtab" onclick="tab('devblog')" id="devblognav">devblog</button>
                 <button class="navtab" onclick="tab('tf2')" id="tf2nav">tf2 servers</button>
             </div>
@@ -37,10 +37,8 @@
         <div class="header-divider"></div>
 
         <div id="abouttab" class="tab">
-            <p>my name is jack <span class="tcolors">"raspy"</span> avery i'm a software developer.</p>
-
-            <p>
-            my projects are visible under the <a href="#projects">projects</a> tab.<br>
+            <p>my name is jack <span class="tcolors">"raspy"</span> avery, and i'm a software developer.
+            my projects are visible under the <a href="#projects">projects</a> tab.<br><br>
             i like to contribute to open-source projects.
             i plan to continue creating fun and/or helpful open-source applications for people to use or experiment with.
             </p>
@@ -237,7 +235,7 @@
                 <a target="_blank" href="https://discord.gg/CykAHkzkhx">discord server</a><br>
             </p>
 
-            <div class="vertical-divider"></div>
+            <div class="small-vertical-divider"></div>
 
             <h3>Control Point Official</h3>
 
@@ -249,7 +247,7 @@
                 <a target="_blank" href="https://discord.gg/RTye2z2unH">discord server</a><br>
             </p>
 
-            <div class="vertical-divider"></div>
+            <div class="small-vertical-divider"></div>
 
             <h3>Boxes 4 Foxes</h3>
 
@@ -258,7 +256,7 @@
                 a hang-out server where players can chat and explore fun custom maps, as well as my custom gamemode <strong>rinstagib</strong>.
             </p>
 
-            <div class="vertical-divider"></div>
+            <div class="small-vertical-divider"></div>
 
             <h3>badwater bestwater</h3>
 
@@ -269,6 +267,8 @@
 
         <div id="devblogtab" class="tab">
             <p>
+            december 4, 2024 - <a href="/post/one_month_with_nixos.html">one month with NixOS: a retrospective</a><br>
+            november 23, 2024 - <a href="/post/linux_info.html">some things to know before swapping to linux</a><br>
             august 26, 2024 - <a href="/post/debootstrap_guide.html">an in-depth debootstrap guide</a><br>
             august 2, 2024 - <a href="/post/debian_install_for_arch_users.html">installing debian (for arch users)</a>
             </p>
