--- a/roles/deploy/files/web/index.html
+++ b/roles/deploy/files/web/index.html
@@ -37,7 +37,7 @@
         <div class="header-divider"></div>
 
         <div id="abouttab" class="tab">
-            <p>my name is jack <span class="tcolors">"raspy"</span> avery, and i'm a software developer.
+            <p>my name is jack <span class="tcolors">"raspy"</span> avery, and i'm a software developer.<br>
             my projects are visible under the <a href="#projects">projects</a> tab.<br><br>
             i like to contribute to open-source projects.
             i plan to continue creating fun and/or helpful open-source applications for people to use or experiment with.
