fix swishcast yt link

--- a/roles/deploy/files/web/index.html
+++ b/roles/deploy/files/web/index.html
@@ -231,7 +231,7 @@
                 <strong>SwishCast Central</strong> is a server for the Team Fortress 2 podcast <strong>the SwishCast</strong> meant to provide an improved casual experience.<br>
                 You can view their list of servers in their discord server.<br><br>
 
-                <a target="_blank" href="https://www.youtube.com/@MANN_Magazine">youtube channel</a><br>
+                <a target="_blank" href="https://www.youtube.com/@Swishcast_tf2">youtube channel</a><br>
                 <a target="_blank" href="https://discord.gg/CykAHkzkhx">discord server</a><br>
             </p>
 
