--- a/roles/deploy/files/web/index.html
+++ b/roles/deploy/files/web/index.html
@@ -30,7 +30,7 @@
                 <button class="navtab" onclick="tab('projects')" id="projectsnav">projects</button>
                 <!-- <button class="navtab" onclick="tab('freelance')" id="freelancenav">freelance</button> -->
                 <button class="navtab" onclick="tab('devblog')" id="devblognav">devblog</button>
-                <button class="navtab" onclick="tab('tf2')" id="tf2nav">tf2 servers</button>
+                <!-- <button class="navtab" onclick="tab('tf2')" id="tf2nav">tf2 servers</button> -->
             </div>
         </header>
 
@@ -67,8 +67,7 @@
             <h3><a target="_blank" href="https://github.com/jack-avery/ansible-tf2network">ansible-tf2network</a></h3>
 
             <p>
-            <strong>ansible-tf2network</strong> is a set of <strong>Ansible playbooks</strong> for managing a small to medium-sized <strong>Team Fortress 2</strong> server network.<br>
-            see the <a href="#tf2">tf2 servers</a> tab to see a list of servers i administrate using these playbooks.
+            <strong>ansible-tf2network</strong> is a set of <strong>Ansible playbooks</strong> for managing a small to medium-sized <strong>Team Fortress 2</strong> server network.
             </p>
 
             <div class="small-vertical-divider"></div>
@@ -220,7 +219,7 @@
 
         <div id="tf2tab" class="tab">
             <p>
-                i currently administrate two server groups for Team Fortress 2 using my <a target="_blank" href="https://github.com/jack-avery/ansible-tf2network/">custom Ansible playbooks</a>.
+                i previously administrate three server groups for Team Fortress 2 using my <a target="_blank" href="https://github.com/jack-avery/ansible-tf2network/">custom Ansible playbooks</a>.
             </p>
 
             <div class="vertical-divider"></div>
@@ -229,7 +228,6 @@
 
             <p>
                 <strong>SwishCast Central</strong> is a server for the Team Fortress 2 podcast <strong>the SwishCast</strong> meant to provide an improved casual experience.<br>
-                You can view their list of servers in their discord server.<br><br>
 
                 <a target="_blank" href="https://www.youtube.com/@Swishcast_tf2">youtube channel</a><br>
                 <a target="_blank" href="https://discord.gg/CykAHkzkhx">discord server</a><br>
@@ -241,7 +239,6 @@
 
             <p>
                 <strong>Control Point Official</strong> is a server for the Team Fortress 2 podcast <strong>Control Point</strong> with a nostalgic mappool and casual ruleset.<br>
-                You can connect at controlpoint.jackavery.ca:27015<br><br>
 
                 <a target="_blank" href="https://www.youtube.com/@ControlPointPodcast">youtube channel</a><br>
                 <a target="_blank" href="https://discord.gg/RTye2z2unH">discord server</a><br>
